fix: navbar overlap with bottom padding

--- a/src/styles.css
+++ b/src/styles.css
@@ -27,7 +27,7 @@
   --color-warning: #FDA769;
   --color-warning-content: #793205;
   --color-error: #D14C18;
-  --color-error-content: #801518;
+  --color-error-content: #FAF7F2;
   --radius-selector: 1rem;
   --radius-field: 0.5rem;
   --radius-box: 1rem;
